--- a/views/admin/view-orders.ejs
+++ b/views/admin/view-orders.ejs
@@ -70,6 +70,14 @@
                         <span class="nav-link-text ms-1">Orders</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white " href="/admin/view-coupon">
+                        <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                            <i class="material-icons opacity-10">redeem</i>
+                        </div>
+                        <span class="nav-link-text ms-1">Coupon</span>
+                    </a>
+                </li>
                 <li class="nav-item mt-3">
                     <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages
                     </h6>
@@ -152,138 +160,78 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                <% if(Array.isArray(orders) && orders.length> 0){%>
-                                                    <% let count=1%>
-                                                        <% orders.forEach((data)=>{%>
-                                                            <tr>
-                                                                <td>
-                                                                    <p class="text-xs font-weight-bold mb-0">
-                                                                        <%=count%>
-                                                                    </p>
-                                                                </td>
-                                                                <td>
-                                                                    <p class="text-xs font-weight-bold mb-0">
-                                                                        <%=data.user.firstName%>
-                                                                    </p>
-                                                                </td>
-                                                                <td>
-                                                                    <p class="text-xs font-weight-bold mb-0">
-                                                                        <%=data.orderDetails.date.toLocaleDateString('en-US',
-                                                                            { year: 'numeric' , month: 'short' ,
-                                                                            day: '2-digit' }).replace(/\//g, '-' )%></p>
-                                                                </td>
-                                                                <td>
-                                                                    <p class="text-xs font-weight-bold mb-0">
-                                                                        <%=data.orderDetails.quantity%>
-                                                                    </p>
-                                                                </td>
-                                                                <td>
-                                                                    <p class="text-xs font-weight-bold mb-0">&#x20B9;
-                                                                        <%=data.product.price%>
-                                                                    </p>
-                                                                </td>
-                                                                <td>
-                                                                    <p class="text-xs font-weight-bold mb-0">&#x20B9;
-                                                                        <%=data.product.price*data.orderDetails.quantity%>
-                                                                    </p>
-                                                                </td>
-                                                                <td>
-                                                                    <img src="/public/userImages/<%=data.product.image%>"
-                                                                        class="avatar avatar-sm me-3 border-radius-lg"
-                                                                        alt="">
-                                                                </td>
-
-
-                                                                <td>
-                                                                    <% if(data.orderDetails &&
-                                                                        data.orderDetails.orderStatus==='Placed' ){%>
-                                                                        <p
-                                                                            class="text-xs text-warning font-weight-bold mb-0">
-                                                                            Placed</p>
-
-                                                                        <% }else if(data.orderDetails &&
-                                                                            data.orderDetails.orderStatus==='Pending' )
-                                                                            {%>
-
-                                                                            <p
-                                                                                class="text-xs text-secondary font-weight-bold mb-0">
-                                                                                Pending</p>
-
-                                                                            <% }else if(data.orderDetails &&
-                                                                                data.orderDetails.orderStatus==='Shipped'
-                                                                                ) {%>
-
-                                                                                <p
-                                                                                    class="text-xs text-primary font-weight-bold mb-0">
-                                                                                    Shipped</p>
-
-                                                                                <% }else if(data.orderDetails &&
-                                                                                    data.orderDetails.orderStatus==='Delivered'
-                                                                                    ){%>
-
-                                                                                    <p
-                                                                                        class="text-xs text-success font-weight-bold mb-0">
-                                                                                        Delivered</p>
-
-                                                                                    <% }else if(data.orderDetails &&
-                                                                                        data.orderDetails.orderStatus==='Cancelled'
-                                                                                        ){ %>
-
-                                                                                        <p
-                                                                                            class="text-xs text-danger font-weight-bold mb-0">
-                                                                                            Cancelled</p>
-
-                                                                                        <% }else if(data.orderDetails &&
-                                                                                            data.orderDetails.orderStatus==='OutforDelivery'
-                                                                                            ){%>
-
-                                                                                            <p
-                                                                                                class="text-xs text-info font-weight-bold mb-0">
-                                                                                                OutforDelivery</p>
-                                                                </td>
-                                                                <% } %>
-
-
-                                                                    <!-- paymentStatus -->
-                                                                    <td>
-                                                                        <% if(data.orderDetails.paymentStatus==='Success'
-                                                                            ){%>
-                                                                            <p
-                                                                                class="text-xs text-success font-weight-bold mb-0">
-                                                                                Success</p>
-                                                                            <% }else
-                                                                                if(data.orderDetails.paymentStatus==='Pending'
-                                                                                ){%>
-                                                                                <p
-                                                                                    class="text-xs font-weight-bold mb-0">
-                                                                                    Pending</p>
-                                                                                <% }else
-                                                                                    if(data.orderDetails.paymentStatus==='Failed'
-                                                                                    ){%>
-                                                                                    <p
-                                                                                        class="text-xs font-weight-bold mb-0">
-                                                                                        Failed</p>
-                                                                                    <% } %>
-                                                                    </td>
-                                                                    <!-- paymentStatus end-->
-
-                                                                    <td class=" text-sm">
-                                                                        <a
-                                                                            href="/admin/view-ordersDetails?orderId=<%=data.orderDetails._id%>&productId=<%=data.product._id%>">
-                                                                            <span
-                                                                                class="badge badge-sm bg-gradient-danger">Manage</span></a>
-                                                                    </td>
-                                                                    <% count++ %>   
-                                                                        <% }); %>
-                                                                            <% }else{ %>
-                                                                                <td>
-                                                                                    <p
-                                                                                        class="text-xs font-weight-bold mb-0">
-                                                                                        Order not found</p>
-                                                                                </td>
-                                                            </tr>
-                                                            <% }%>
-                                            </tbody>
+                                                <% if(Array.isArray(orders) && orders.length > 0) { %>
+                                                  <% let count = 1; %>
+                                                  <% orders.forEach((data) => { %>
+                                                    <tr>
+                                                      <td>
+                                                        <p class="text-xs font-weight-bold mb-0"><%= count %></p>
+                                                      </td>
+                                                      <td>
+                                                        <p class="text-xs font-weight-bold mb-0"><%= data.user.firstName %></p>
+                                                      </td>
+                                                      <td>
+                                                        <p class="text-xs font-weight-bold mb-0"><%= data.orderDetails.date.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></p>
+                                                      </td>
+                                                      <td>
+                                                        <p class="text-xs font-weight-bold mb-0"><%= data.orderDetails.quantity %></p>
+                                                      </td>
+                                                      <td>
+                                                        <p class="text-xs font-weight-bold mb-0">&#x20B9; <%= data.product.price %></p>
+                                                      </td>
+                                                      <td>
+                                                        <p class="text-xs font-weight-bold mb-0">&#x20B9; <%= data.product.price * data.orderDetails.quantity %></p>
+                                                      </td>
+                                                      <td>
+                                                        <img src="/public/userImages/<%= data.product.image %>" class="avatar avatar-sm me-3 border-radius-lg" alt="">
+                                                      </td>
+                                                      <td>
+                                                        <% if(data.orderDetails.orderStatus === 'Placed') { %>
+                                                          <p class="text-xs text-warning font-weight-bold mb-0">Placed</p>
+                                                        <% } else if(data.orderDetails.orderStatus === 'Pending') { %>
+                                                          <p class="text-xs text-secondary font-weight-bold mb-0">Pending</p>
+                                                        <% } else if(data.orderDetails.orderStatus === 'Shipped') { %>
+                                                          <p class="text-xs text-primary font-weight-bold mb-0">Shipped</p>
+                                                        <% } else if(data.orderDetails.orderStatus === 'Delivered') { %>
+                                                          <p class="text-xs text-success font-weight-bold mb-0">Delivered</p>
+                                                        <% } else if(data.orderDetails.orderStatus === 'Cancelled') { %>
+                                                          <p class="text-xs text-danger font-weight-bold mb-0">Cancelled</p>
+                                                        <% } else if(data.orderDetails.orderStatus === 'OutforDelivery') { %>
+                                                          <p class="text-xs text-info font-weight-bold mb-0">OutforDelivery</p>
+                                                        <% } %>
+                                                      </td>
+                                                      <td>
+                                                        <% if(data.orderDetails.paymentStatus === 'Success') { %>
+                                                          <p class="text-xs text-success font-weight-bold mb-0">Success</p>
+                                                        <% } else if(data.orderDetails.paymentStatus === 'Pending') { %>
+                                                          <p class="text-xs font-weight-bold mb-0">Pending</p>
+                                                        <% } else if(data.orderDetails.paymentStatus === 'Failed') { %>
+                                                          <p class="text-xs font-weight-bold mb-0">Failed</p>
+                                                        <% } %>
+                                                      </td>
+                                                      <td class="text-sm">
+                                                        <% if(data.orderDetails.orderStatus === 'Cancelled') { %>
+                                                          <span class="badge badge-sm bg-gradient-secondary">No Action</span>
+                                                        <% } else { %>
+                                                          <a href="/admin/view-ordersDetails?orderId=<%= data.orderDetails._id %>&productId=<%= data.product._id %>">
+                                                            <span class="badge badge-sm bg-gradient-danger">Manage</span>
+                                                          </a>
+                                                        <% } %>
+                                                      </td>
+                                                    </tr>
+                                                    <% count++; %>
+                                                  <% }); %>
+                                                <% } else { %>
+                                                  <tr>
+                                                    <td colspan="10">
+                                                      <p class="text-xs font-weight-bold mb-0">Order not found</p>
+                                                    </td>
+                                                  </tr>
+                                                <% } %>
+                                              </tbody>
+                                              
+                                              
+                                              
                                         </table>
                                     </div>
                                 </div>
